--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gymnasium</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -44,7 +45,58 @@
             </div>
         </div>
     </nav>
+    <section id="banner">
+        <div class="banner-slider">
+            <div class="banner-item bg1">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 m-auto">
+                            <div class="banner-text text-white text-center">
+                                <h4 class="text-uppercase">time to start</h4>
+                                <h1 class="text-uppercase">gymnasium</h1>
+                                <p class="detail col-lg-10 m-auto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                                <a href="#" class="btn btn-outline-light text-uppercase">join now</a>
+                                <a href="#" class="btn btn-outline-light text-uppercase">view more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-item bg2">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="banner-text text-white">
+                                <h4 class="text-uppercase">time to start</h4>
+                                <h1 class="text-uppercase">gymnasium</h1>
+                                <p class="detail col-lg-10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                                <a href="#" class="btn btn-outline-light text-uppercase">join now</a>
+                                <a href="#" class="btn btn-outline-light text-uppercase">view more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="banner-item bg3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-6 ms-auto">
+                            <div class="banner-text text-white text-end">
+                                <h4 class="text-uppercase">time to start</h4>
+                                <h1 class="text-uppercase">gymnasium</h1>
+                                <p class="detail col-lg-10 ms-auto">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                                <a href="#" class="btn btn-outline-light text-uppercase">join now</a>
+                                <a href="#" class="btn btn-outline-light text-uppercase">view more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 
