--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Gymnasium</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/venobox.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -94,9 +97,134 @@
             </div>
         </div>
     </section>
+
+    <section id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="about-image">
+                        <figure>
+                            <img src="image/About.jpg" alt="about-image" class="img-fluid w-100">
+                            <div class="about-overlay">
+                                <a class="video-link" data-autoplay="true" data-vbtype="video" href="https://www.youtube.com/watch?v=vi1-4fcX_ig">
+                                    <i class="fa fa-play-circle"></i>
+                                </a>
+                            </div>
+                        </figure>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-heading text-center">
+                        <h3>about us</h3>
+                        <img src="image/header-Icon.png">
+                    </div>
+                    <div class="about-text">
+                        <p class="pt-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                            specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+                        <p class="pt-4">
+                            Remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software my name is of Lorem Ipsum.Lorem Ipsum is simply dummy text of the
+                            printing and typesetting industry.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="gallery">
+        <div class="gallery-heading text-center col-lg-12">
+            <h3>our gallery</h3>
+            <img src="image/header-Icon.png">
+        </div>
+        <div class="gallery-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <figure>
+                            <img src="image/gl1.jpg" alt="gallery image 1" class="img-fluid w-100">
+                            <div class="gl-overlay">
+                                <a href="image/gl1.jpg" class="light-box"><i class="fa fa-search-plus"></i></a>
+                            </div>
+                        </figure>
+                        <figure>
+                            <img src="image/gl4.jpg" alt="gallery image 1" class="img-fluid w-100">
+                            <div class="gl-overlay">
+                                <a href="image/gl4.jpg" class="light-box"><i class="fa fa-search-plus"></i></a>
+                            </div>
+                        </figure>
+                    </div>
+                    <div class="col">
+                        <figure>
+                            <img src="image/gl2.jpg" alt="gallery image 1" class="img-fluid w-100">
+                            <div class="gl-overlay">
+                                <a href="image/gl2.jpg" class="light-box"><i class="fa fa-search-plus"></i></a>
+                            </div>
+                        </figure>
+                        <figure>
+                            <img src="image/gl3.jpg" alt="gallery image 1" class="img-fluid w-100">
+                            <div class="gl-overlay">
+                                <a href="image/gl3.jpg" class="light-box"><i class="fa fa-search-plus"></i></a>
+                            </div>
+                        </figure>
+                    </div>
+                    <div class="col">
+                        <figure>
+                            <img src="image/gl5.jpg" alt="gallery image 1" class="img-fluid w-100">
+                            <div class="gl-overlay">
+                                <a href="image/gl5.jpg" class="light-box"><i class="fa fa-search-plus"></i></a>
+                            </div>
+                        </figure>
+                        <figure>
+                            <img src="image/gl6.jpg" alt="gallery image 1" class="img-fluid w-100">
+                            <div class="gl-overlay">
+                                <a href="image/gl6.jpg" class="light-box"><i class="fa fa-search-plus"></i></a>
+                            </div>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="our-team">
+        <div class="team-heading text-center text-uppercase">
+            <h3>about us</h3>
+            <img src="image/header-Icon.png">
+        </div>
+        <div class="profile">
+            <div class="container">
+                <div class="row">
+                    <div class="image1 col-lg-3">
+                        <div class="img">
+                            <img src="image/img1.jpg" alt="img1">
+                            <div class="overlay-img"></div>
+                        </div>
+                        <div class="img-text">
+                            <h5>monica brown</h5>
+                            <p>cheif trainer</p>
+                        </div>
+                    </div>
+                    <div class="image1 col-lg-3">
+                        <img src="image/img2.jpg" alt="img2">
+                        <h5>Dunson creek</h5>
+                        <p>cheif trainer</p>
+                    </div>
+                    <div class="image1 col-lg-3">
+                        <img src="image/img3.jpg" alt="img3">
+                        <h5>Knitty Mim</h5>
+                        <p>female trainer</p>
+                    </div>
+                    <div class="image1 col-lg-3">
+                        <img src="image/img4.jpg" alt="img4">
+                        <h5>Tim Broke</h5>
+                        <p>male trainer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <script src="js/slick.min.js"></script>
+    <script src="js/venobox.min.js"></script>
     <script src="js/main.js" type="text/javascript"></script>
 </body>
 
